--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MegzMugz Portfolio</title>
+    <title>Three.js Example</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
+    <div id="three-container"></div>
+    <script src="https://threejs.org/build/three.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
