--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Three.js Example</title>
+    <title>Rohan Mengle Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" href="">
     <!-- bootstrap cdn -->
