--- a/index.html
+++ b/index.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MegzMugz Portfolio</title>
+    <title>Rohan Mengle Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="icon" href="">
+    <!-- bootstrap cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- Other elements in head -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
+
+    <div>
+        <div class="intro-text"><b>hi, i am <br>rohan mengle</b></div>
+
+        <div class="social-links">
+            <a href="your-github-link" target="_blank"><i class="fab logo fa-github"></i></a>
+            <a href="mailto:your-email"><i class="fas logo fa-envelope"></i></a>
+            <a href="your-resume-link" target="_blank"><i class="fas logo fa-file-alt"></i></a>
+            <a href="your-linkedin-link" target="_blank"><i class="fab logo fa-linkedin-in"></i></a>
+        </div>
+    </div>
+
     
+
+
+    
+
+    <div id="three-container"></div>
+    <!-- Your navbar code here -->
+
+    <!-- Include THREE.js and Vanta.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.dots.min.js"></script>
+
+    <nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Projects</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Initialize Vanta.js with dots effect -->
+    <script>
+        VANTA.DOTS({
+            el: "#three-container",
+            color: 0xffffff,
+            backgroundColor: 0x000000
+            // Additional customization options
+        });
+    </script>
+
+
+    <!-- bootstrap javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <script src="app.js"></script>
 </body>
 </html>
