make some UI changes w/ hovering and added yt link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
 <body>
 
     <div>
-        <div class="intro-text"><b>hi, i am <br>rohan mengle</b></div>
+        <div class="intro-text"><b>hi, i am <br><span id="name">rohan mengle</span></b></div>
+
+        <div class="summary">
+            <span>developer.</span>
+            <span>student.</span>
+            <span><a href="https://www.youtube.com/channel/UCH3D9rq2s17MRPjwRot3IBg" target="_blank">youtuber.</a></span>
+
+        </div>
+
+        
 
         <div class="social-links">
             <a href="https://github.com/Megz-Mugz" target="_blank"><i class="fab logo fa-github"></i></a>
@@ -58,7 +67,7 @@
         VANTA.DOTS({
             el: "#three-container",
             color: 0xffffff,
-            backgroundColor: 0x000000
+            backgroundColor: 0x072541
             // Additional customization options
         });
     </script>
