--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="aboutMe.html">Experience</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About Me</a>
+                        <a class="nav-link" href="aboutMe.html">Skills</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Projects</a>
