--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div>
-        <div class="intro-text"><b>hi, i am <br><span id="name">rohan mengle</span></b></div>
+        <div class="intro-text"><b>hi, i am <br><span id="name"></span></b></div>
 
         <div class="summary">
             <span>developer.</span>
@@ -56,7 +56,7 @@
                         <a class="nav-link" href="aboutMe.html">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Projects</a>
+                        <a class="nav-link" href="aboutMe.html">Projects</a>
                     </li>
                 </ul>
             </div>
