misc changes & playing  w/ UI for aboutMe page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <div class="summary">
             <span>developer.</span>
-            <span>student.</span>
+            <span>cs student.</span>
             <span><a href="https://www.youtube.com/channel/UCH3D9rq2s17MRPjwRot3IBg" target="_blank">youtuber.</a></span>
 
         </div>
