--- a/aboutMe.html
+++ b/aboutMe.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Rohan Mengle Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/aboutMe-styles.css">
     <link rel="icon" href="">
     <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -11,16 +11,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <!-- New section for skills and work experience -->
-    
-
-
-    <div id="three-container"></div>
-    <!-- Your navbar code here -->
-
-    <!-- Include THREE.js and Vanta.js -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.dots.min.js"></script>
 
     <nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
         <div class="container-fluid">
@@ -43,15 +33,22 @@
         </div>
     </nav>
 
-    <!-- Initialize Vanta.js with dots effect -->
-    <script>
-        VANTA.DOTS({
-            el: "#three-container",
-            color: 0xffffff,
-            // Additional customization options
-        });
-    </script>
 
+    <!-- New section for skills and work experience -->
+    <div class="center-card">
+        <div class="card text-center">
+            <div class="card-header">
+                Featured
+            </div>
+            <div class="card-body">
+                <h5 class="card-title">Special title treatment</h5>
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Your navbar code here -->
 
     <!-- bootstrap javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
