--- a/index.html
+++ b/index.html
@@ -43,17 +43,18 @@
     <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.dots.min.js"></script>
 
     <nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
+        
         <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+              </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutMe.html">Experience</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="aboutMe.html">Skills</a>
+                        <a class="nav-link" href="aboutMe.html">About Me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="aboutMe.html">Projects</a>
