--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="aboutMe.html">About Me</a>
                     </li>
                     <li class="nav-item">
