--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="nav-link" href="aboutMe.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutMe.html">Projects</a>
+                        <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                 </ul>
             </div>
