--- a/aboutMe.html
+++ b/aboutMe.html
@@ -10,76 +10,96 @@
     <!-- Other elements in head -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
-<body></body>
+<body>
 
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+              </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="aboutMe.html">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">Projects</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <div id="three-container"></div>
-    <!-- Your navbar code here -->
+    <!-- Content Section -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <!-- Your photo will be placed here -->
+                <img id="logo" src="images/logo.png" alt="">
+            </div>
+            <div class="col-md-8">
+                <h1>About Me</h1>
+
+                <div class="skills">
+                    <h2>Skills</h2>
+                    <ul>
+                        <p><b>Languages: </b>Java, Python, C/C++, JavaScript, SQL, R, HTML, CSS, Swift, Kotlin</p>
+
+                        <p> <b>Tools/Frameworks</b> Scikit-learn, NumPy, Pandas, Matplotlib, Seaborn, React.js,<br> Node.js, MongoDB, Express.js, Bootstrap, Flask, Django, EJS, Kubernetes, Docker, <br>Jupyter Notebook, Git/Github, JUnit </p>
+
+                    </ul>
+                    <p></p>
+                </div>
+                <div class="experience">
+                    <h2>Experience</h2>
+                    <ul>
+                        <p>
+                            <b>January 2024 - Present</b><br>
+                            George Mason University <br>
+                            Undergraduate Teaching Assistant
+                        </p>
+                    </ul>
+                </div>
+                <div class="education">
+                    <h2>Education</h2>
+                    <ul>
+                        <p>
+                            <b>August 2024 - December 2026 </b><br>
+                            George Mason University <br>
+                            MS Computer Science (Concentration: Machine Learning)
+                        </p>
+
+                        <p>
+                            <b>August 2024 - December 2026 </b><br>
+                            George Mason University <br>
+                            BS Applied Computer Science (Concentration: Software Engineering)
+                        </p>
+                    </ul>
+                </div>
+                
+                <div class="education">
+                    <h2>Certification</h2>
+                    <ul>
+                        <p>
+                            <b>near future</b><br>
+                            Administering Microsoft Azure SQL (DP-300)
+                        </p>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Include THREE.js and Vanta.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta/dist/vanta.dots.min.js"></script>
 
-    <div class="container">
-        <div class="left-panel">
-            <!-- Your photo will be placed here -->
-            <img id="logo" src="images/logo.png" alt="">
-        </div>
-        <div class="rdight-panel">
-            <h1>About Me</h1>
-
-            <div class="skills">
-                <h2>Skills</h2>
-                <ul>
-                    <p><b>Languages: </b>Java, Python, C/C++, JavaScript, SQL, R, HTML, CSS, Swift, Kotlin</p>
-
-                    <p> <b>Tools/Frameworks</b> Scikit-learn, NumPy, Pandas, Matplotlib, Seaborn, React.js,<br> Node.js, MongoDB, Express.js, Bootstrap, Flask, Django, EJS, Kubernetes, Docker, <br>Jupyter Notebook, Git/Github, JUnit </p>
-
-                </ul>
-                <p></p>
-            </div>
-            <div class="experience">
-                <h2>Experience</h2>
-                <ul>
-                    <p>
-                        <b>January 2024 - Present</b><br>
-                        George Mason University <br>
-                        Undergraduate Teaching Assistant
-                    </p>
-                </ul>
-            </div>
-            <div class="education">
-                <h2>Education</h2>
-                <ul>
-                    <p>
-                        <b>August 2024 - December 2026 </b><br>
-                        George Mason University <br>
-                        MS Computer Science (Concentration: Machine Learning)
-                    </p>
-
-                    <p>
-                        <b>August 2024 - December 2026 </b><br>
-                        George Mason University <br>
-                        BS Applied Computer Science (Concentration: Software Engineering)
-                    </p>
-                </ul>
-            </div>
-            
-            <div class="education">
-                <h2>Certification</h2>
-                <ul>
-                    <p>
-                        <b>near future</b><br>
-                        Administering Microsoft Azure SQL (DP-300)
-                    </p>
-                </ul>
-            </div>
-        </div>
-    </div>
-
     <!-- bootstrap javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-    <script src="app.js"></script>
-</body>
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNe
