--- a/aboutMe.html
+++ b/aboutMe.html
@@ -37,20 +37,15 @@
     <!-- Content Section -->
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
-                <!-- Your photo will be placed here -->
-                <img id="logo" src="images/logo.png" alt="">
-            </div>
-            <div class="col-md-8">
+            <div class="col--8">
                 <div class="skills">
                     <h2>Skills</h2>
                     <ul>
                         <p><b>Languages: </b>Java, Python, C/C++, JavaScript, SQL, R, HTML, CSS, Swift, Kotlin</p>
 
-                        <p> <b>Tools/Frameworks</b> Scikit-learn, NumPy, Pandas, Matplotlib, Seaborn, React.js,<br> Node.js, MongoDB, Express.js, Bootstrap, Flask, Django, EJS, Kubernetes, Docker, <br>Jupyter Notebook, Git/Github, JUnit </p>
+                        <p> <b>Tools/Frameworks</b> Scikit-learn, NumPy, Pandas, Matplotlib, Seaborn, React.js,Node.js, MongoDB, Express.js, Bootstrap, Flask, Django, EJS, Kubernetes, Docker, Jupyter Notebook, Git/Github, JUnit </p>
 
                     </ul>
-                    <p></p>
                 </div>
                 <div class="experience">
                     <h2>Experience</h2>
