--- a/aboutMe.html
+++ b/aboutMe.html
@@ -14,7 +14,11 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
+        
         <div class="container-fluid">
+            <a class="navbar-brand" href="index.html">
+                <img id="navbar-logo" src="images/logo.png" width="50" height="50" alt="">
+              </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
