--- a/aboutMe.html
+++ b/aboutMe.html
@@ -47,9 +47,18 @@
                     <ul>
                         <p><b>Languages: </b>Java, Python, C/C++, JavaScript, SQL, R, HTML, CSS, Swift, Kotlin</p>
 
-                        <p> <b>Tools/Frameworks</b> Scikit-learn, NumPy, Pandas, Matplotlib, Seaborn, React.js,Node.js, MongoDB, Express.js, Bootstrap, Flask, Django, EJS, Kubernetes, Docker, Jupyter Notebook, Git/Github, JUnit </p>
+                        <p> <b>Tools/Frameworks</b> Scikit-learn, NumPy, Pandas, Matplotlib, Seaborn, React.js,Node.js, <br> MongoDB, Express.js, Bootstrap, Flask, Django, EJS, Kubernetes, <br> Docker, Jupyter Notebook, Git/Github, JUnit </p>
 
                     </ul>
+
+                    <div class="card">
+                        <h5 class="card-header">Featured</h5>
+                        <div class="card-body">
+                          <h5 class="card-title">Special title treatment</h5>
+                          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                      </div>
                 </div>
                 <div class="experience">
                     <h2>Experience</h2>
