--- a/aboutMe.html
+++ b/aboutMe.html
@@ -136,7 +136,7 @@
                   <br>
 
                   <div class="card ">
-                    <h5 class="card-header">Featured</h5>
+                    <h5 class="card-header">Education</h5>
                     <div class="card-body">
                       <h5 class="card-title">Special title treatment</h5>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
@@ -147,7 +147,7 @@
                   <br>
 
                   <div class="card">
-                    <h5 class="card-header">Featured</h5>
+                    <h5 class="card-header">Certifications</h5>
                     <div class="card-body">
                       <h5 class="card-title">Special title treatment</h5>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
