--- a/aboutMe.html
+++ b/aboutMe.html
@@ -126,6 +126,9 @@
                   <div class="card">
                     <h5 class="card-header">Experience</h5>
                     <div class="card-body">
+                      
+                      <h3>Jan 2024 - Present </h3>
+
                       <h5 class="card-title">GMU CS Department - Undergraduate Teaching Assistant</h5>
                       <p>Hosting and designing comprehensive review sessions for midterm and final <br> examinations, actively engaging groups of 10-20 students <br> in an inquiry-driven and interactive learning experience.</p>
 
@@ -149,7 +152,7 @@
                   <div class="card">
                     <h5 class="card-header">Certifications</h5>
                     <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
+                      <h5 class="card-title">George Mason University</h5>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
