--- a/aboutMe.html
+++ b/aboutMe.html
@@ -141,7 +141,7 @@
                   <div class="card ">
                     <h5 class="card-header">Education</h5>
                     <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
+                      <h5 class="card-title">George Mason University</h5>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
@@ -152,7 +152,7 @@
                   <div class="card">
                     <h5 class="card-header">Certifications</h5>
                     <div class="card-body">
-                      <h5 class="card-title">George Mason University</h5>
+                      <h5 class="card-title"></h5>
                       <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                       <a href="#" class="btn btn-primary">Go somewhere</a>
                     </div>
