made it obvi where user is on page.

--- a/projects.html
+++ b/projects.html
@@ -30,8 +30,9 @@
                       <a class="nav-link" href="aboutMe.html">About Me</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="projects.html">Projects</a>
-                  </li>
+                    <a class="nav-link" href="projects.html" style="color: yellow !important;">Projects</a>
+                </li>
+                
               </ul>
           </div>
       </div>
