--- a/aboutMe.html
+++ b/aboutMe.html
@@ -27,7 +27,7 @@
                       <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="aboutMe.html">About Me</a>
+                      <a class="nav-link" href="aboutMe.html" style="color: yellow !important;">About Me</a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="projects.html">Projects</a>
