--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="">
     <!-- bootstrap cdn -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="icon" href="images/logo.png">
 
     <!-- Other elements in head -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
@@ -16,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-light navbar-transparent">
       <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-              <img id="navbar-logo" src="images/logo.png" width="50" height="50" alt="">
+              <img id="navbar-logo" src="images/logo.png" width="80" height="80" alt="">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
