--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
         <div class="intro-text"><b>hi, i am <br><span id="name"></span></b></div>
 
         <div class="summary">
-            <span>developer.</span>
-            <span>cs student.</span>
-            <span><a href="https://www.youtube.com/channel/UCH3D9rq2s17MRPjwRot3IBg" target="_blank">youtuber.</a></span>
-
+            <span>Software Engineer</span><br>
+            <span>MS CS Student</span><br>
         </div>
 
         <div class="social-links">
