fixed parts on home page

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
 
     <div>
-        <div class="intro-text"><b>hi, i am <br><span id="name"></span></b></div>
+        <div class="intro-text"><b>hi, i am 
+            <br><span id="name"></span></b>
+        </div>
 
         <div class="summary">
             <span>Software Engineer</span><br>
-            <span>MS CS Student</span><br>
         </div>
 
         <div class="social-links">
