--- a/aboutMe.html
+++ b/aboutMe.html
@@ -51,7 +51,7 @@
                   
                   <h3>March 2024 - Present </h3>
 
-                  <h5 class="card-title">Solution Street - Software Engineer</h5>
+                  <h5 class="card-title">Solution Street - Software Engineer Intern</h5>
                   <p>Implementing an internal recruitment tool using Natural Language Processing <br> with Python’s NLTK to assess software engineer’s resumes, <br> reducing manual labor in the hiring process by over 90%. </p>
                  
                   <p>Resolving full-stack tickets for clients' websites, using Ruby on Rails; <br> implementing new features, migrating databases, and enhancing existing production code <br> to increase user experience and overall client satisfaction. </p>
