--- a/aboutMe.html
+++ b/aboutMe.html
@@ -54,10 +54,15 @@
                   <h5 class="card-title">Solution Street - Software Engineer Intern</h5>
                   <p>Working with Ruby on Rails while consulting with product owners to help achieve their business goals.</p>
                  
+                  <h3>Jan 2025 - Present </h3>
 
-                  <h3>Jan 2024 - Present </h3>
+                  <h5 class="card-title">GMU CS Department - Undergraduate Teaching Assistant - SWE 437</h5>
+                  <p>Starting this semester</p>
 
-                  <h5 class="card-title">GMU CS Department - Undergraduate Teaching Assistant</h5>
+
+                  <h3>Jan 2024 - Jan 2025 </h3>
+
+                  <h5 class="card-title">GMU CS Department - Undergraduate Teaching Assistant - CS 262</h5>
                   <p>Facilitating instruction on low level computer science concepts emphasizing <br> bitwise operators,  memory allocation, pointers, and structures to over 400 students; <br> enhancing students’ understanding of the C programming language. </p>
 
                     
