--- a/aboutMe.html
+++ b/aboutMe.html
@@ -155,26 +155,11 @@
                       
                       <p class="card-text">George Mason University <br> B.S Applied Computer Science</p>
 
-                      <h3 class="card-title">August 2018 - June 2022</h3>
-                      <p class="card-text">Academies of Loudoun <br>Advanced Studies Diploma
-                      </p>
-
                       <h4>Relevant Courses:</h4>
-                      <p>Data Structures and Algorithms, Full Stack Web Development, <br> Computer Systems and Programming, Software Engineering, <br> Object Oriented Programming, Low Level Programming</p>
+                      <p>Data Structures, Operating Systems, Databases, <br> Computer Systems Architecture, Secure Programming and Systems, <br> Data Mining, Object Oriented Design & Specification, Software Engineering</p>
 
                     </div>
                   </div>
-
-                  <br>
-
-                  <div class="card">
-                    <h5 class="card-header">Certifications</h5>
-                    <div class="card-body">
-                      <h5 class="card-title">Soon To Be Administering Microsoft Azure SQL (DP-300) Certified</h5>
-
-                      <h5 class="card-title">Soon To Be AWS Cloud Practicioner Certified</h5>
-                    </div>
-                  </div>  
             </div>
         </div>
     </div>
