--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Rohan Mengle Portfolio</title>
+    <title>Rohan Mengle</title>
     <link rel="stylesheet" type="text/css" href="css/aboutMe-styles.css">
     <link rel="icon" href="">
     <!-- bootstrap cdn -->
