--- a/aboutMe.html
+++ b/aboutMe.html
@@ -51,7 +51,7 @@
                   
                   <h3>March 2024 - Present </h3>
 
-                  <h5 class="card-title">Solution Street - Software Engineer Intern</h5>
+                  <h5 class="card-title">Solution Street - Software Developer</h5>
                   <p>Working with Ruby on Rails while consulting with product owners to help achieve their business goals.</p>
                  
                   <h3>Jan 2025 - Present </h3>
