--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="summary">
-            <span>Software Engineer</span><br>
+            <span>Software Developer</span><br>
         </div>
 
         <div class="social-links">
