--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h2>Skills</h2>
 
     <p><strong>Languages:</strong> C++, Java, Python, JavaScript, C</p>
-    <p><strong>Tools:</strong> Git, Docker, Kubernetes, React, MongoDB, Flask, Django</p>
+    <p><strong>Tools:</strong> LLVM, PinFI, CUDA, Ruby on Rails, GoogleTest, Git/GitHub</p>
   </div>
 </section>
 
