updated project link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         inspired by real-world database internals.
       </p>
 
-      <a class="btn btn-outline-light" href="https://github.com/Megz-Mugz/Medjo" target="_blank">
+      <a class="btn btn-outline-light" href="https://github.com/Megz-Mugz/mini-query-lang" target="_blank">
         View Project
       </a>
     </div>
