--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   <div class="container narrow">
     <h2>Skills</h2>
 
-    <p><strong>Languages:</strong> C++, Java, Python, JavaScript, C</p>
+    <p><strong>Languages:</strong> C++, Python, C, Ruby, Java, JavaScript</p>
     <p><strong>Tools:</strong> LLVM, PinFI, CUDA, Ruby on Rails, GoogleTest, Git/GitHub</p>
   </div>
 </section>
