updated researcher description

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="item">
       <h4>George Mason University - Graduate Researcher</h4>
       <span class="muted">August 2025 – Present</span>
-      <p>Developed and maintained internal and external client projects using Ruby on Rails.</p>
+      <p>Compiler & systems reliability research.</p>
     </div>
 
     <div class="item">
