--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h2>Skills</h2>
 
     <p><strong>Languages:</strong> C++, Python, C, Ruby, Java, JavaScript</p>
-    <p><strong>Tools:</strong> LLVM, PinFI, CUDA, Ruby on Rails, GoogleTest, Git/GitHub</p>
+    <p><strong>Tools:</strong> Git/GitHub, LLVM, PinFI, Ruby on Rails, GoogleTest</p>
   </div>
 </section>
 
