--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Rohan Mengle</title>
+  <title>Rohan</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,6 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
   <div class="container">
-    <a class="navbar-brand" href="#home">Rohan Mengle</a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -38,16 +37,32 @@
 
 <!-- HERO -->
 <section id="home" class="hero">
-  <div class="container">
+  <div class="container text-center">
     <h1>Hi, I’m Rohan.</h1>
-    <p class="lead">
-      Researcher and software engineer interested in compilers, systems, and low level computing. 
-    </p>
+  </div>
+</section>
+
+<!-- EXPERIENCE -->
+<section id="experience" class="section alt">
+  <div class="container narrow">
+    <h2>Experience</h2><br>
+
+    <div class="item">
+      <h4>George Mason University - Graduate Researcher</h4>
+      <span class="muted">August 2025 – Present</span>
+      <p>Compiler & systems reliability research.</p>
+    </div><br>
+
+    <div class="item">
+      <h4>George Mason University - Undergraduate Teaching Assistant</h4>
+      <span class="muted">January 2024 – May 2025</span><br>
+      <p>SWE 437 (Software Testing), CS 262 (Introduction to Low-Level Computing)</p>
+    </div>
   </div>
 </section>
 
 <!-- PROJECTS -->
-<section id="projects" class="section alt">
+<section id="projects" class="section">
   <div class="container narrow">
     <h2>Projects</h2>
 
@@ -68,37 +83,15 @@
   </div>
 </section>
 
-<!-- EXPERIENCE -->
-<section id="experience" class="section">
-  <div class="container narrow">
-    <h2>Experience</h2>
-
-    <div class="item">
-      <h4>George Mason University - Graduate Researcher</h4>
-      <span class="muted">August 2025 – Present</span>
-      <p>Compiler & systems reliability research.</p>
-    </div>
-
-    <div class="item">
-      <h4>Solution Street — Software Engineer Intern</h4>
-      <span class="muted">Mar 2024 – Jan 2026</span>
-      <p>Developed and maintained internal and external client projects using Ruby on Rails.</p>
-    </div>
-
-    <div class="item">
-      <h4>Undergraduate Teaching Assistant</h4>
-      <span class="muted">SWE 437, CS 262</span>
-    </div>
-  </div>
-</section>
 
 <!-- SKILLS -->
 <section id="skills" class="section alt">
   <div class="container narrow">
     <h2>Skills</h2>
 
-    <p><strong>Languages:</strong> C++, Python, C, Ruby, Java, JavaScript</p>
-    <p><strong>Tools:</strong> Git/GitHub, LLVM, PinFI, Ruby on Rails, GoogleTest</p>
+    <p><strong>Languages:</strong> C/C++, Rust, Python, Ruby, Java, HTML/CSS, JavaScript/TypeScript, SQL</p>
+    <p><strong>Technologies:</strong> Git/GitHub, LLVM, gem5, PinFI, SLURM, GoogleTest, AWS(S3), Docker</p>
+    <p><strong>Frameworks/Libraries:</strong> Ruby on Rails, React.js, jQuery, PostgreSQL</p>
   </div>
 </section>
 
@@ -108,23 +101,12 @@
     <h2>Education</h2>
 
     <p>
-      <strong>George Mason University (Expected Graduation: June 2027)</strong><br>
+      <strong>George Mason University</strong><br>
       M.S. Computer Science<br>
       B.S. Applied Computer Science
     </p>
-
-    <p class="muted">
-      Relevant coursework: Compilers, Computer Architecture, Operating Systems, Data Structures, Algorithms
-    </p>
   </div>
 </section>
-
-<!-- Footer -->
-<footer class="footer">
-  <div class="container text-center">
-    <p>© 2026 Rohan Mengle</p>
-  </div>
-</footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
