--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <div class="container narrow">
     <h2>Skills</h2>
 
-    <p><strong>Languages:</strong> C/C++, Rust, Python, Ruby, Java, HTML/CSS, JavaScript/TypeScript, SQL</p>
+    <p><strong>Languages:</strong> C/C++, Python, Ruby, Java, HTML/CSS, JavaScript/TypeScript, SQL</p>
     <p><strong>Technologies:</strong> Git/GitHub, LLVM, gem5, PinFI, SLURM, GoogleTest, AWS(S3), Docker</p>
     <p><strong>Frameworks/Libraries:</strong> Ruby on Rails, React.js, jQuery, PostgreSQL</p>
   </div>
